--- a/app/views/teas/_form.html.haml
+++ b/app/views/teas/_form.html.haml
@@ -8,8 +8,8 @@
   .fields
     = f.input :name
     = f.input :factory
-    = select_tag(@tea.class.name.underscore) do
-      %div
+    = f.input :category do
+      = select_tag("tea[category]", opt_hash(SETTINGS[:tea][:categories], @tea.category))
 
   .actions
     = f.submit 'Save'
