now can attach pictures to tea

--- a/app/views/tea_pictures/_form.html.haml
+++ b/app/views/tea_pictures/_form.html.haml
@@ -2,7 +2,11 @@
   = f.error_notification
 
   .form-inputs
-    = f.input :tea_id
+    - if @tea
+      = f.input :tea_id, :as => :hidden, :input_html => {:value => @tea.id}
+    - else
+      = f.association :tea
+    = f.input :picture
 
   .form-actions
     = f.button :submit
