--- a/app/views/tea_pictures/index.html.haml
+++ b/app/views/tea_pictures/index.html.haml
@@ -2,14 +2,14 @@
 
 %table
   %tr
-    %th Tea
+    %th
     %th
     %th
     %th
 
   - @tea_pictures.each do |tea_picture|
     %tr
-      %td= tea_picture.tea_id
+      %td= image_tag tea_picture.picture.url(:small)
       %td= link_to 'Show', tea_picture
       %td= link_to 'Edit', edit_tea_picture_path(tea_picture)
       %td= link_to 'Destroy', tea_picture, :method => :delete, :data => { :confirm => 'Are you sure?' }
