--- a/app/views/tea_links/_form.html.haml
+++ b/app/views/tea_links/_form.html.haml
@@ -2,7 +2,10 @@
   = f.error_notification
 
   .form-inputs
-    = f.input :tea_id
+    - if @tea
+      = f.input :tea_id, :as => :hidden, :input_html => {:value => @tea.id}
+    - else
+      = f.association :tea
     = f.input :link
 
   .form-actions
