--- a/app/views/tea_links/show.html.haml
+++ b/app/views/tea_links/show.html.haml
@@ -5,7 +5,7 @@
   = @tea_link.tea_id
 %p
   %b Link:
-  = @tea_link.link
+  = link_to @tea_link.link, @tea_link.link
 
 = link_to 'Edit', edit_tea_link_path(@tea_link)
 \|
