new file:   app/views/layouts/_user_lists.html.haml 	modified:   app/views/layouts/application.html.haml 	modified:   config/settings.yml

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -13,6 +13,9 @@
       .span-4
         %div= render :partial => "layouts/categories"
 
+        - if user_signed_in?
+          %div= render :partial => "layouts/user_lists"
+
         = yield :left_panel
 
       .span-20.last
