--- a/app/views/teas/show.html.haml
+++ b/app/views/teas/show.html.haml
@@ -10,7 +10,7 @@
         = link_to "remove from #{list_name}", assignment, :method => :delete
       - else
         = link_to "add to list #{list_name}", tea_list_assignments_path("tea_list_assignment[list_name]" => list_name, "tea_list_assignment[tea_id]" => @tea.id), :method => :post
-  %p= link_to "Compare with",
+  %p= link_to "Compare with", select_second_tea_path(@tea)
 
 %p
   %b Name:
