--- a/app/views/tea_comparsions/comparsion.html.haml
+++ b/app/views/tea_comparsions/comparsion.html.haml
@@ -1,10 +1,10 @@
 .span-8
-  = image_tag(@first_tea.tea_pictures.first.picture.url(:medium)) if @first_tea.tea_pictures.length > 0
+  = render :partial => "tea_vs", :locals => {:tea => @first_tea}
 
 %h1.span-2.large VS
 
 .span-8.last
-  = image_tag(@second_tea.tea_pictures.first.picture.url(:medium)) if @second_tea.tea_pictures.length > 0
+  = render :partial => "tea_vs", :locals => {:tea => @second_tea}
 
--# - SETTINGS[:axis][:names].each do |axis_name|
-  -# = render :partial => :axis, :locals => {:axis_name
+- SETTINGS[:axis][:names].each do |axis_name|
+  = render :partial => "axis_vs", :locals => {:axis_name => axis_name}
