--- a/app/views/tea_comparsions/_axis_vs.html.haml
+++ b/app/views/tea_comparsions/_axis_vs.html.haml
@@ -6,13 +6,13 @@
   - if comparsion && comparsion.right_tea.id == @first_tea.id && comparsion.result != 0
     %h2 This
   - else
-    = link_to(create_comparsion_path(axis_name, @first_tea, @second_tea), :method => :post) do
+    = link_to(create_comparsion_path(axis_name, @first_tea, @first_tea, @second_tea), :method => :post) do
       %h2 This
 
 .span-6
   %div
     - if comparsion
-      = link_to comparsion, :method => :delete do
+      = link_to tea_comparsion_path(comparsion, :first_tea_id => @first_tea.id), :method => :delete do
         %h2 Dont know
     - else
       %h2 Dont know
@@ -21,12 +21,12 @@
     - if comparsion && comparsion.result == 0
       %h2 They equal
     - else
-      = link_to(create_comparsion_path(axis_name, @first_tea, @second_tea, 0), :method => :post) do
+      = link_to(create_comparsion_path(axis_name, @first_tea, @first_tea, @second_tea, 0), :method => :post) do
         %h2 They equal
 
 .span-7.last
   - if comparsion && comparsion.right_tea.id == @second_tea.id && comparsion.result != 0
     %h2 This
   - else
-    = link_to(create_comparsion_path(axis_name, @second_tea, @first_tea), :method => :post) do
+    = link_to(create_comparsion_path(axis_name, @first_tea, @second_tea, @first_tea), :method => :post) do
       %h2 This
