--- a/app/views/teas/_form.html.haml
+++ b/app/views/teas/_form.html.haml
@@ -8,7 +8,7 @@
   .fields
     = f.input :name
     = f.input :factory
-    = f.input :collection_date, :start_year => 1900
+    = f.input :collection_date, :start_year => 1900, :end_year => Time.now.year
     = f.input :category do
       = select_tag("tea[category]", opt_hash(SETTINGS[:tea][:categories], @tea.category))
 
