--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -11,3 +11,50 @@
  *= require_self
  *= require_tree .
  */
+
+
+.sidebar_block {
+    /* margin-top: 20px; */
+    margin-right: 5px;
+    border-left: 1px solid black;
+    border-right: 1px solid black;
+    background-color: #DEDEDE;
+}
+
+.sidebar_block > div {
+    padding: 5px;
+}
+
+.sidebar_block__header {
+    width: 100%;
+    color: white;
+    background-color: #505050;
+    border-radius: 4px;
+}
+
+.sidebar_block__header > div {
+    padding: 2px 10px 2px 10px;
+}
+
+.sidebar_block__content > div {
+    padding-left: 10px;
+}
+
+
+.page_content {
+    /* margin-top: 20px; */
+    border-left: 1px solid black;
+    border-right: 1px solid black;
+}
+
+.page_content > div {
+    padding: 20px;
+}
+
+.site_header {
+    text-align: center;
+}
+
+.site_header > div {
+    margin-top: 20px;
+}
