--- a/app/assets/stylesheets/teas.css.scss
+++ b/app/assets/stylesheets/teas.css.scss
@@ -1,3 +1,20 @@
 // Place all the styles related to the Teas controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+
+.show_tea_block > div {
+    padding-top: 10px;
+}
+
+.big_tea_picture {
+    margin-bottom: 10px;
+}
+
+.medium_tea_picture {
+    width: 150px;
+    height: 150px;
+    display: inline-block;
+    vertical-align: baseline;
+    text-align: center;
+}
