--- a/app/views/teas/show.html.haml
+++ b/app/views/teas/show.html.haml
@@ -1,38 +1,29 @@
 %p#notice= notice
 
-%p Added by: #{@tea.user.email}
+.span-8
+  %div
+    %div= t :tea_name_is, :name => @tea.name
+    %div= t :tea_category_is, :category => @tea.category
+    %div= t :tea_collection_date_is, :date => @tea.collection_date if @tea.collection_date
+
+.span-8.last
+  %div
+    %div= t :tea_added_by, :user => @tea.user.email
+    %div= t :tea_factory_is, :factory => @tea.factory if @tea.factory
 
 - if user_signed_in?
-  %p
-    - SETTINGS[:user][:lists].each do |list_name|
-      - assignment = current_user.named_tea_assignment(list_name, @tea)
-      - if assignment
-        = link_to "remove from #{list_name}", assignment, :method => :delete
-      - else
-        = link_to "add to list #{list_name}", tea_list_assignments_path("tea_list_assignment[list_name]" => list_name, "tea_list_assignment[tea_id]" => @tea.id), :method => :post
-  %p= link_to "Compare with", select_second_tea_path(@tea)
+  = render :partial => "user_block", :locals => {:tea => @tea}
 
-%p
-  %b Name:
-  = @tea.name
-%p
-  %b Factory:
-  = @tea.factory
-%p
-  %b Category:
-  = @tea.category
+.show_tea_block.span-19.last
+  %div= render :partial => "tea_pictures", :locals => {:tea => @tea}
 
-.tea_pictures
-  - @tea.tea_pictures.each do |pic|
-    .tea_picture
-      = link_to pic do
-        = image_tag pic.picture.url(:medium)
+.show_tea_block.span-19.last
+  %div
+    - @tea.tea_links.each do |link|
+      = link_to link.link, link.link
 
-.tea_links
-  - @tea.tea_links.each do |link|
-    = link_to link.link, link.link
-
-= link_to "Attach picture", new_tea_picture_path("tea[id]" => @tea.id)
+.show_tea_block.span-19.last
+  %div= link_to "Attach picture", new_tea_picture_path("tea[id]" => @tea.id)
 
 = link_to "Attach link", new_tea_link_path("tea[id]" => @tea.id)
 
