--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,7 +14,7 @@
 
 
 .sidebar_block {
-    /* margin-top: 20px; */
+    margin-bottom: 10px;
     margin-right: 5px;
     border-left: 1px solid black;
     border-right: 1px solid black;
