--- a/app/assets/stylesheets/teas.css.scss
+++ b/app/assets/stylesheets/teas.css.scss
@@ -2,8 +2,12 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+.show-tea-block {
+    width: 100%;
+    display: block;
+}
 
-.show_tea_block > div {
+.show-tea-block > div {
     padding-top: 10px;
 }
 
