--- a/app/views/teas/show.html.haml
+++ b/app/views/teas/show.html.haml
@@ -6,13 +6,14 @@
     %div= t :tea_category_is, :category => @tea.category
     %div= t :tea_collection_date_is, :date => @tea.collection_date if @tea.collection_date
 
-.span-8.last
+.span-8
   %div
     %div= t :tea_added_by, :user => @tea.user.email
     %div= t :tea_factory_is, :factory => @tea.factory if @tea.factory
 
 - if user_signed_in?
-  = render :partial => "user_block", :locals => {:tea => @tea}
+  .span-19.last
+    = render :partial => "user_block", :locals => {:tea => @tea}
 
 .show-tea-block
   %div= render :partial => "tea_pictures", :locals => {:tea => @tea}
