--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -30,6 +30,7 @@
     color: white;
     background-color: #505050;
     border-radius: 4px;
+    margin-bottom: 10px;
 }
 
 .sidebar_block__header > div {
