--- a/app/views/teas/_user_block.html.haml
+++ b/app/views/teas/_user_block.html.haml
@@ -1,12 +1,5 @@
-- if tea.user == current_user
-  .show-tea-block
-    %div
-      = link_to tea, :method => :delete do
-        = t :remove_tea
-      = link_to edit_tea_path(tea) do
-        = t :edit_tea
 
-.show-tea-block
+.span-19.last.show-tea-block
   %div
     - SETTINGS[:user][:lists].each do |list_name|
       %div
@@ -22,7 +15,9 @@
           = link_to tea_list_assignments_path("tea_list_assignment[list_name]" => list_name, "tea_list_assignment[tea_id]" => tea.id), :method => :post do
             = t "add_to_list_#{list_name}"
 
-.show-tea-block
+.clearfix
+
+.span-19.last.show-tea-block
   %div
     = link_to select_second_tea_path(tea) do
       = t :compare_tea
