--- a/app/views/teas/_comment_form.html.haml
+++ b/app/views/teas/_comment_form.html.haml
@@ -1,3 +1,4 @@
 = form_tag comment_tea_path(@tea), :method => :post do
-  = text_field_tag "tea[comment]"
-  = submit_tag "Send"
+  = text_area_tag "tea[comment]", "", :class => "span-18 last"
+  .clearfix
+  = submit_tag t(:send_tea_comment)
