--- a/app/views/teas/_form.html.haml
+++ b/app/views/teas/_form.html.haml
@@ -13,4 +13,4 @@
       = select_tag("tea[category]", opt_hash(SETTINGS[:tea][:categories], @tea.category))
 
   .actions
-    = f.submit 'Save'
+    = f.submit t(:save_tea)
