--- a/app/assets/stylesheets/tea_pictures.css.scss
+++ b/app/assets/stylesheets/tea_pictures.css.scss
@@ -1,3 +1,7 @@
 // Place all the styles related to the TeaPictures controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.tea-picture {
+    max-width: 100%;
+}
