description added to teas

--- a/app/views/teas/_tea_pictures.html.haml
+++ b/app/views/teas/_tea_pictures.html.haml
@@ -1,9 +1,12 @@
 - pics = tea.tea_pictures.all
 - pic = pics.first
 - if pic
-  .big_tea_picture
+  .big_tea_picture.left
     = link_to pic do
       = image_tag pic.picture.url(:big)
+  %article.readable-text= simple_format tea.description
+
+  .clearfix
   - pics[1..pics.length].each do |pic|
     .medium_tea_picture
       = link_to pic do
