--- a/app/views/teas/_form.html.haml
+++ b/app/views/teas/_form.html.haml
@@ -7,6 +7,7 @@
           %li= msg
   .fields
     = f.input :name
+    = f.input :description, :as => :text
     = f.input :factory
     = f.input :collection_date, :start_year => 1900, :end_year => Time.now.year
     = f.input :category do
