--- a/app/views/teas/_user_block.html.haml
+++ b/app/views/teas/_user_block.html.haml
@@ -15,7 +15,8 @@
           = link_to tea_list_assignments_path("tea_list_assignment[list_name]" => list_name, "tea_list_assignment[tea_id]" => tea.id), :method => :post, :class => "button_green" do
             %div= t "add_to_list_#{list_name}"
 
-.span-8.last.show-tea-block
-  %div
-    = link_to select_second_tea_path(tea), :class => "button_blue" do
-      %div= t :compare_tea
+- if current_user.can_compare?(tea)
+  .span-8.last.show-tea-block
+    %div
+      = link_to select_second_tea_path(tea), :class => "button_blue" do
+        %div= t :compare_tea
