--- a/app/views/axis/show.html.haml
+++ b/app/views/axis/show.html.haml
@@ -1,12 +1,8 @@
-= @axis_name
+%h2= t @axis_name
 
-= t @axis_name
-
-%ul
-  - @tea_groups.each do |tg|
-    %li
-      %ul
-        - tg.each do |tid, xval|
-          - if @teas.has_key? tid
-            - tea = @teas[tid]
-            %li #{tea.name} has weight #{xval}
+.span-18.last
+  - @teas.keys.sort.reverse!.each do |xpos|
+    .span-18.last.show-tea-block
+      %div= render :partial => "teas_group", :locals => {:teas => @teas[xpos]}
+    .clearfix
+.clearfix
