--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -12,6 +12,9 @@
  *= require_tree .
  */
 
+/* a:hover { */
+/*     color: black!important; */
+/* } */
 
 .sidebar_block {
     margin-bottom: 10px;
