--- a/app/views/pages/about.html.haml
+++ b/app/views/pages/about.html.haml
@@ -1,3 +1,41 @@
 %h2 О сайте
 
-Ну вот, типа описалово.
+%p
+
+  Metatea - это агрегатор информации о чаях, а также, нечто вроде журнала
+  чайного пьяницы. Здесь вы можете хранить список чаев, которые вы уже
+  пробовали, или хотите попробовать, сравнивать чаи друг с другом по различным
+  параметрам, коментировать, добавлять описания к чаям и ссылки на интернет
+  магазины, где можно этот чай заказать.
+
+%h2 Сравнение чаев
+
+%p
+
+  Одной из главных целей проекта является классификация чаев по различным
+  "осям". Ось - это некоторое свойство чая, которое проявляется в большей, либо
+  меньшей степени у различных чаев. Задача состоит в том, чтобы выявить, какой
+  чай сильнее всех "вставляет", или какой чай сымый ароматный, но этого нельзя
+  сделать не сравнив чаи друг с другом. Согласитесь, трудно сказать, что чай А
+  ароматен на 57%, а чай Б только на 40%.
+
+%p
+
+  Для выявления самого ароматного чая нужно сравнить чай А с чаем Б, выяснить,
+  что чай А ароматнее, но чай В еще ароматнее, а чай Г хуже, чем чай Б. Таким
+  образом окажется, что чай В - самый ароматный. Но не все так просто, ведь
+  сколько пользователей, столько и мнений. Один пользователь может считать, что
+  чай А ароматнее, чем чай Б, а другой наоборот.
+
+%p
+
+  Metatea агрегирует данную информацию, решая задачу раскладывания графа на
+  прямой. Отчасти, именно по этому оси названы осями.
+
+%h2 Исходный код
+
+%p
+  Metatea - Open Source проект. Исходинки лежат
+  #{link_to "тут", "https://github.com/s9gf4ult/metatea"}.
+  Если вы нашли ошибку, либо имеете конструктивные пожелания, то
+  #{link_to "багтрекер", "https://github.com/s9gf4ult/metatea/issues"} тоже присутствует.
